application & deployment/deployment/clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
     name: redis
     app: myapp
spec:
##clusterIP by default
  selector:
     name: redis
     app: myapp 
  ports:
  ##port of redis 
    - port: 6379
      targetPort: 6379
