application & deployment/deployment/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: myapp 
 
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
