application & deployment/deployment/service.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: randomquotes
spec:
  template:
    spec:
      containers:
        - image: gcr.io/project-for-mohab/myimage:latest
          ports:
            - name: http1
              containerPort: 8000
