application & deployment/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: webapp
spec:
  defaultBackend:
   service:
      name: myapp
      port:
        number: 8000
